@@ -155,6 +155,9 @@ Trunk (unreleased changes)
 
     HADOOP-3795. Fix saving image files on Namenode with different checkpoint
     stamps. (Lohit Vijayarenu via mahadev)
+   
+    HADOOP-3624. Improving createeditslog to create tree directory structure.
+    (Lohit Vijayarenu via mahadev)
 
 Release 0.18.0 - Unreleased
 
